[metadata]
name = fluentm
version = 0.0.2
author = hyakuhei
author_email = hyakuhei@gmail.com
summary = Architecture descriptions as code 
description = Build, analyize and render data-flow-diagrams as code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyakuhei/fluentm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
	graphviz ==0.16
	Jinja2==3.0.1

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
	examples*
	private*
